cmake_minimum_required(VERSION 3.10)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(socket VERSION 1.0)

add_executable(multiple_server multiple_server.cpp)
add_executable(single_server single_server.cpp)
add_executable(client client.cpp)

target_link_libraries(multiple_server pthread)
